# qr

./: .gitignore  .travis.yml  Encode.hs  Grouping.hs  LICENSE  Layout.hs  README.md  ReedSolomon.hs  Types.hs  example.hs  qr.cabal  sample.hs  stack.yaml
cqr/: cqr.hs
examples/: cqr.hs
src/Data/QR/: Encode.hs  Grouping.hs  Layout.hs  ReedSolomon.hs  Tables.hs  Types.hs
