name:                qr
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paolo Capriotti
maintainer:          p.capriotti@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable qr
  main-is: sample.hs
  default-language: Haskell2010
  build-depends:
    base == 4.6.*,
    array == 0.4.*,
    gtk == 0.12.*,
    cairo == 0.12.*,
    transformers == 0.3.*