name:                qr
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paolo Capriotti
maintainer:          p.capriotti@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10

flag examples
  description: Build examples
  Default: False

library
  build-depends:
    base == 4.6.*,
    array == 0.4.*,
    utf8-string == 0.3.*
  ghc-options: -Wall -O2
  hs-source-dirs: src
  exposed-modules:
    Data.QR.Encode,
    Data.QR.Grouping,
    Data.QR.Layout,
    Data.QR.ReedSolomon,
    Data.QR.Tables,
    Data.QR.Types
  default-language: Haskell2010

executable cqr
  if flag(examples)
    Buildable: True
  else
    Buildable: False

  main-is: examples/cqr.hs
  default-language: Haskell2010
  build-depends:
    base == 4.6.*,
    array == 0.4.*,
    gtk == 0.12.*,
    cairo == 0.12.*,
    transformers == 0.3.*,
    optparse-applicative >= 0.7 && < 0.10,
    qr